--- a/src/App.css
+++ b/src/App.css
@@ -3,27 +3,30 @@
 }
 
 .App-logo {
-  /* animation: App-logo-spin infinite 20s linear;*/
-  height: 120px;
+  animation: App-logo-spin infinite 20s linear;
+  height: 40vmin;
 }
 
 .App-header {
-  background-color: #222;
-  height: 180px;
-  padding: 15px;
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-title {
-  font-size: 1.5em;
+.App-link {
+  color: #61dafb;
 }
 
-.App-intro {
-  font-size: large;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
-
-/*@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}*/
-
