--- a/src/views/index.css
+++ b/src/views/index.css
@@ -15,8 +15,17 @@ justify-content: center;
 .Login-box{
 display: flex;
 flex-direction: column;  
+align-items: center;
+justify-content: center;
 }
 .card-content{
     display: flex;
     flex-direction: column;
+}
+.Home{
+    width: 100%;
+}
+.Home nav{
+    width: 100%;
+    padding: 10px; 
 }
