--- a/src/views/index.css
+++ b/src/views/index.css
@@ -1,9 +1,14 @@
 html, body{
-    width: 40%;
+    
     margin: 0;
     overflow-x: hidden;
     align-items: center;
     justify-content: center;
+    background: #BA5370;  
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #F4E2D8, #BA5370);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #F4E2D8, #BA5370); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
 .Login{
